--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   pronouns         : # example: "he/him"  
   bio              : "Make the meaningless meaningful"
   location         : "Earth"
-  employer         : "Red Brick University"
+  employer         : "Beijing Institute of Technology"
   uri              : # URL
   email            : "none@example.org" 
 
